2009-06-08  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#120367 - hildon-home-76CD-11 crash observed while in layout
	mode

	* src/hd-notification-manager.c (hd_notification_manager_timeout,
	  hd_notification_manager_get, idle_emit): Do not emit signals on
	  finalized object.

	* debian/changelog: Update.

2009-06-04  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.32

	* configure.ac: 0.3.32

2009-06-04  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#120772 - Fontsize keep reducing for newly added task
	shortucts

	* src/hd-task-shortcut.c (hd_task_shortcut_init): Copy
	PangoFontDescription before modifying.

	* debian/changelog: Update.

2009-06-04  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#120707 - Time in task switcher for notification not showing
	properly and not updated
	
	* src/hd-incoming-event-window.c (MINUTE, HOUR, DAY, YEAR): Fixes
	macros.

	* debian/changelog: Update.

2009-06-04  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.31

	* configure.ac: 0.3.31

2009-06-03  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#120135 - bookmark widget thumbnail preview misaligned in
	allocated space

	* src/hd-bookmark-shortcut.c (BORDER_WIDTH_TOP): Fix border.

	* debian/changelog: Update.

2009-06-03  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#120026 - New notification category needed for foreground
	sms/chatmessages

	* src/hd-incoming-events.c (hd_incoming_events_notified):
	* src/hd-notification-manager.c (hd_notification_manager_notify):
	Support foreground sms/chat massags without notification windows.

	* debian/changelog: Update.

2009-06-03  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-task-shortcut.c (hd_task_shortcut_init): Use 5/6 size of
	SystemFont as font size (same as in task launcher).

2009-06-03  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#120622 - Multiple notification is not as expected

	* src/hd-change-background-dialog.c